--- a/public/styleC.css
+++ b/public/styleC.css
@@ -1,12 +1,3 @@
-/*body {
-	background-image:('./public/background.jpg');
-	background-repeat: no-repeat;
-	background-color: red;
-  webkit-background-size: cover;
-  moz-background-size: cover;
-  o-background-size: cover;
-  background-size: cover;
-}*/
 
 .jumbotron {
  background: url('background1.jpg');
@@ -33,3 +24,13 @@ h3 {
 color:white;
 font-family: 'Roboto', sans-serif;
 }
+
+
+/*html {
+  background: url(/background1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-blend-mode: screen;
+}*/
