--- a/public/styleC.css
+++ b/public/styleC.css
@@ -20,7 +20,7 @@ font-family: 'Roboto', sans-serif;
 }
 
 h3 {
-
+margin:5px;
 color:white;
 font-family: 'Roboto', sans-serif;
 }
@@ -34,3 +34,7 @@ font-family: 'Roboto', sans-serif;
   background-size: cover;
   background-blend-mode: screen;
 }*/
+
+input {
+	margin:5px;
+}
