--- a/public/styleC.css
+++ b/public/styleC.css
@@ -11,8 +11,8 @@
 }
 
 h1 {
-margin: 10px 10px;
-padding: 10px 10px;
+margin: 0px 10px;
+padding: 0px 10px;
 text-align: center;
 color:white;
 font-family: 'Roboto', sans-serif;
@@ -37,4 +37,10 @@ font-family: 'Roboto', sans-serif;
 
 input {
 	margin:5px;
+}
+
+h6 {
+	color:lightgray;
+	text-align: center;
+	text-indent: 300px;
 }
